gitops/apps/vintage/k8s/frontend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: vintage
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: public
      namespace: edge
  hostnames:
    - hiraya.noidilin.dev
  rules:
    - backendRefs:
        - name: frontend
          port: 3000
